2001-01-28  Marius Vollmer  <mvo@zagadka.ping.de>

	* readline.scm (make-readline-port): PROMPT becomes PROMPT2 as
	soon as GET-CHARACTER returns any character at all that was
	previously read.  This makes the continuation prompt appear
	properly for partial expressions.  Thanks to Neil Jerram!

2001-01-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	This patch fixes a problem reported by Martin Grabmueller about
	the impossibility to access readline's run-time options.

	* readline.scm:  Added a comment about guile's behaviour if one of
	the ports used by readline are closed.

	(readline-options readline-enable readline-disable,
	readline-set!):  These are now defined here instead of in
	boot-9.scm.

2001-01-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* readline.scm (set-readline-input-port!,
	set-readline-output-port!):  Make sure that only valid port
	parameters are passed.  Thanks to Martin Grabmueller for sending
	a patch that formed the basis for this change.

2001-01-18  Neil Jerram  <neil@ossau.uklinux.net>

	* readline.scm (make-readline-port): Make readline port
	input-only.

2000-12-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* readline.scm (activate-readline):  Lookup 'use-emacs-interface
	in the-root-module.

2000-11-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* readline.c (current_input_getc):  Use more explicit predicate
	than SCM_NIMP.

	(scm_readline, scm_readline_init_ports, completion_function):
	Remove redundant SCM_N?IMP tests.

	(scm_readline):  Fixed default input/output port parameter
	handling.

2000-11-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* readline.c (scm_readline, scm_add_history, completion_function,
	scm_filename_completion_function):  Replace calls to
	SCM_COERCE_SUBSTR with SCM_STRING_COERCE_0TERMINATION_X.

	(internal_readline, scm_add_history, scm_read_history,
	scm_write_history, scm_filename_completion_function,
	completion_function):  Replace SCM_CHARS with SCM_STRING_CHARS.

2000-11-19  Gary Houston  <ghouston@arglist.com>
